feat(icon): add icon.css

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>svg-to-font</title>
+  <title>Svg2icon</title>
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <%if(_link) {%>
   <link rel="stylesheet" href="<%=_link%>" />
@@ -44,8 +44,8 @@
 </head>
 
 <body>
-  <h1>svg-to-font</h1>
-  <h2>GitHub:<a target="_blank" href="https://github.com/AiMe1991/svg-to-font">https://github.com/AiMe1991/svg-to-font</a></h2>
+  <h1>Svg2icon</h1>
+  <h2>GitHub:<a target="_blank" href="https://github.com/geektech-team/svg2icon">svg2icon</a></h2>
   <div class="icons">
     <ul>
       <%-_IconHtml%>
