feat(global): add bin script

--- a/src/styles/icon.css
+++ b/src/styles/icon.css
@@ -3,6 +3,7 @@
     src: url("{{fontsDistName}}/{{fontname}}.eot?t={{timestamp}}"); /* IE9*/
     src: url("{{fontsDistName}}/{{fontname}}.eot?t={{timestamp}}#iefix") format("embedded-opentype"), /* IE6-IE8 */
     url("{{fontsDistName}}/{{fontname}}.woff?t={{timestamp}}") format("woff"),
+    url("{{fontsDistName}}/{{fontname}}.woff2?t={{timestamp}}") format("woff2"),
     url("{{fontsDistName}}/{{fontname}}.ttf?t={{timestamp}}") format("truetype"), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
     url("{{fontsDistName}}/{{fontname}}.svg?t={{timestamp}}#{{fontname}}") format("svg"); /* iOS 4.1- */
   }
