feat(template): add usage

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -69,8 +69,7 @@
 </head>
 
 <body>
-    <h1>Svg2icon</h1>
-    <h2>GitHub:<a target="_blank" href="https://github.com/geektech-team/svg2icon">svg2icon</a></h2>
+    <h1>Svg2icon <span>GitHub:<a target="_blank" href="https://github.com/geektech-team/svg2icon">svg2icon</a></span></h1>
     <div class="icons">
         <ul>
             <%-_IconHtml%>
